# Microblog

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  test_build_verification.py  validate_cli.py
.codemachine/: template.json
.codemachine/inputs/: specifications.md
.codemachine/prompts/: code_fallback.md  context.md
content/posts/: 2025-10-27-test-post.md  2025-10-27-test.md  2025-10-28-published-article.md  2025-10-28-python-vs-javascript.md  2025-10-28-success-test-post.md  2025-10-28-tagged-post.md  2025-10-28-test-blog-post.md  2025-10-28-test-post-with-python-tags.md  2025-10-28-test-post.md  2025-10-28-test.md  2025-10-28-title.md  2025-10-28-updated-htmx-post.md  2025-10-28-web-development-guide.md  2025-10-31-tagged-post.md  2025-10-31-test-blog-post.md  2025-10-31-test-post.md  2025-10-31-test.md
docs/: config_schema.json  deployment.md
docs/api/: openapi.yaml
docs/diagrams/: auth_flow.puml  build_process.puml  component_diagram.puml  database_erd.puml  deployment.puml
microblog/: __init__.py  cli.py  database.py  utils.py
microblog/auth/: __init__.py  jwt_handler.py  models.py  password.py
microblog/builder/: __init__.py  asset_manager.py  generator.py  markdown_processor.py  template_renderer.py
microblog/content/: __init__.py  image_service.py  post_service.py  tag_service.py  validators.py
microblog/server/: __init__.py  app.py  build_service.py  config.py  health.py  middleware.py  security.py
microblog/server/routes/: __init__.py  api.py  auth.py  dashboard.py
microblog/utils/: __init__.py  cache.py  logging.py  monitoring.py
nginx/: microblog.conf
scripts/: backup.sh  deploy.sh
static/css/: dashboard.css
static/js/: dashboard.js
systemd/: microblog.service
templates/: archive.html  base.html  index.html  post.html  rss.xml  tag.html
templates/auth/: login.html  logout.html
templates/dashboard/: home.html  layout.html  pages_list.html  post_edit.html  posts_list.html  settings.html
tests/: conftest.py
tests/e2e/: test_complete_workflows.py  test_htmx_interactions.py
tests/integration/: test_auth_comprehensive.py  test_auth_flows.py  test_build_process.py  test_content_comprehensive.py  test_coverage_boost.py  test_dashboard.py  test_server_comprehensive.py
tests/unit/: test_auth.py  test_build_system.py  test_config.py  test_jwt.py  test_post_service.py
tools/: install.sh  lint.sh  run.sh  test.sh
